<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	android:id="@+id/LinearLayout01"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="vertical">

<TableLayout android:id="@+id/TableLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:stretchColumns="0,1">
<TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent" android:layout_height="wrap_content">
<EditText android:id="@+id/anniversary_input" android:layout_width="wrap_content" android:layout_span="2" android:layout_height="100px"/>
</TableRow>

<TableRow android:id="@+id/TableRow02" android:layout_height="wrap_content" android:layout_width="fill_parent">
<DatePicker android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:id="@+id/anniversary_date" android:layout_gravity="center"/>
</TableRow>
<TableRow android:id="@+id/TableRow04" android:layout_width="wrap_content" android:layout_height="wrap_content">
<RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="center" android:layout_span="2" android:id="@+id/count_style" android:checkedButton="@+id/countdown_radio">
<RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/countdown_radio_title" android:id="@+id/countdown_radio"></RadioButton>
<RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/countup_radio_title" android:id="@+id/countup_radio"></RadioButton>

</RadioGroup>
</TableRow><TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content"><Button android:layout_height="wrap_content" android:text="@string/add_button_title" android:id="@+id/anniversary_add_button" android:layout_width="fill_parent"></Button><Button android:layout_height="wrap_content" android:id="@+id/anniversary_cancel_button" android:text="@string/cancel_button_title" android:layout_width="fill_parent"></Button>

</TableRow>

<TableRow android:id="@+id/TableRow05" android:layout_width="wrap_content" android:layout_height="wrap_content"><Button android:layout_height="wrap_content" android:id="@+id/anniversary_delete_button" android:layout_width="fill_parent" android:text="@string/delete_button_title" android:layout_span="2"></Button></TableRow>
</TableLayout>



</LinearLayout>
